# ninja-nextjs-template

./: README.md  package-lock.json
backend/: pyproject.toml
backend/backend/: settings.py
backend/backend/api/: __init__.py  schemas.py  security.py  users.py  utils.py
backend/backend/users/: models.py
frontend/: next.config.js  package-lock.json  package.json
frontend/src/api/: auth.ts  client-api.ts  errors.ts  fetch.ts  interfaces.ts  server-api.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/user/: page.tsx
frontend/src/app/_components/: ExternalLink.tsx
